crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__add_bool_num.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_bool_num.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (+ true 123.0)))

----- stderr -----
