crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__divide.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/divide.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (/ 8.0 2.0))
   (print (/ 12.34 12.34)))

----- stderr -----
